# how-fast-wasm

./: .eslintrc.js  .eslintrc.json  .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: App.ts  App.tsx  _index.ts  index.ts  index.tsx
src/components/: Button.ts  Card.ts  Card.tsx  Grid.ts  Grid.tsx  index.ts
src/utils/: jsDfs.ts
src/workers/: dfsWorker.ts  dfsWorker.wasm.ts
style/: index.scss
wasm/: Cargo.toml
wasm/src/: lib.rs
